better align the input-validator component with the standard bootstrap form markup. remove dependency on ember-truth-helpers, add example to dummy app, fix tests

--- a/addon/styles/addon.css
+++ b/addon/styles/addon.css
@@ -1,6 +1,9 @@
-.input-validator .input-validation-error {
+.input-validator .input-validator-error {
+    min-height: 1.4rem;
+    padding-top: 0.2rem;
+}
+
+.input-validator .input-validator-error .invalid-feedback {
     display: block;
-    min-height: 1.2rem;
-    line-height: 1.2rem;
-    font-size: .75rem;
+    margin-top: 0;
 }
